--- a/index.html
+++ b/index.html
@@ -113,9 +113,9 @@
 
 
 
-      <h1 id="pizzaCount" style="font-size: 133px; font-family: 'Lobster', cursive;" class="display-1">506<h5>🍕 Пицц с беконом съедено 🐷</h5></h1>
+      <h1 id="pizzaCount" style="font-size: 133px; font-family: 'Lobster', cursive;" class="display-1">682<h5>🍕 Пицц с беконом съедено 🐷</h5></h1>
       <div class="progress" style='height: 48px'>
-        <div class="progress-bar progress-bar-striped bg-danger progress-bar-animated" role="progressbar" style="width: 25%;" aria-valuenow="506" aria-valuemin="0" aria-valuemax="2019">25%</div>
+        <div class="progress-bar progress-bar-striped bg-danger progress-bar-animated" role="progressbar" style="width: 33%;" aria-valuenow="682" aria-valuemin="0" aria-valuemax="2019">33%</div>
       </div>
 
       <p class="lead">🎅 Дней до нового года – <b>11</b></p>
@@ -128,7 +128,7 @@
     <ul>
       <li>Съешь любую пиццу с беконом, карбонатом или ветчиной</li>
       <li>Сфотографируй или сохрани чек</li>
-      <li>Отмечайся в <a target="_blank" href="https://www.instagram.com/p/B6LF_OPIXXo/">этом посте в Instagram</a> или <a target="_blank" href="https://vk.com/pizzasicilia?w=wall-61690394_13277">ВКонтакте</a> и участвуй в розыгрыше 30 000 рублей на новогодние праздники.</li>
+      <li>Отмечайся в <a target="_blank" onclick="yaCounter56668807.reachGoal('instagram-click'); return=true;"  href="https://www.instagram.com/p/B6LF_OPIXXo/">этом посте в Instagram</a> или <a target="_blank" href="https://vk.com/pizzasicilia?w=wall-61690394_13277">ВКонтакте</a> и участвуй в розыгрыше 30 000 рублей на новогодние праздники.</li>
     </ul>
     <p>Принять участие можно <a href="http://dostavka.pizza-sicilia.ru/">заказав доставку</a> или посетив любую пиццерию Сицилия!</p>
     <br>
@@ -147,7 +147,7 @@
             <p class="small" style="height: 80px">Ветчина, Сервелат, Грибы, Томаты, Лук-карамель, Сыр Моцарелла</p>
             <p>40см, 1000г – 745р</p>
             <a class="card-link">
-            <a class="btn btn-danger btn-lg" href="https://dostavka.pizza-sicilia.ru/pitstsa/pizza-40-cm-large/sitsiliya-pitstsa" role="button">Заказать</a>
+            <a class="btn btn-danger btn-lg" onclick="yaCounter56668807.reachGoal('zakaz-click'); return=true;" href="https://dostavka.pizza-sicilia.ru/pitstsa/pizza-40-cm-large/sitsiliya-pitstsa" role="button">Заказать</a>
             </a>
           </div>
         </div>
@@ -162,7 +162,7 @@
             <p></p>
             <p>30см, 600г – 415р</p>
             <a class="card-link">
-            <a class="btn btn-danger btn-lg" href="https://dostavka.pizza-sicilia.ru/pitstsa/pizza-30-cm-medium/suprim" role="button">Заказать</a>
+            <a class="btn btn-danger btn-lg" onclick="yaCounter56668807.reachGoal('zakaz-click'); return=true;" href="https://dostavka.pizza-sicilia.ru/pitstsa/pizza-30-cm-medium/suprim" role="button">Заказать</a>
             </a>
           </div>
         </div>
@@ -177,7 +177,7 @@
             <p></p>
             <p>40см, 1100г – 745р</p>
             <a class="card-link">
-            <a class="btn btn-danger btn-lg" href="https://dostavka.pizza-sicilia.ru/pitstsa/pizza-40-cm-large/tsezar" role="button">Заказать</a>
+            <a class="btn btn-danger btn-lg" onclick="yaCounter56668807.reachGoal('zakaz-click'); return=true;" href="https://dostavka.pizza-sicilia.ru/pitstsa/pizza-40-cm-large/tsezar" role="button">Заказать</a>
             </a>
           </div>
         </div>
@@ -192,7 +192,7 @@
             <p></p>
             <p>40см, 1000г – 775р</p>
             <a class="card-link">
-            <a class="btn btn-danger btn-lg" href="https://dostavka.pizza-sicilia.ru/pitstsa/pizza-40-cm-large/manchester" role="button">Заказать</a>
+            <a class="btn btn-danger btn-lg" onclick="yaCounter56668807.reachGoal('zakaz-click'); return=true;" href="https://dostavka.pizza-sicilia.ru/pitstsa/pizza-40-cm-large/manchester" role="button">Заказать</a>
             </a>
           </div>
         </div>
@@ -207,7 +207,7 @@
             <p></p>
             <p>40см, 1100г – 689р</p>
             <a class="card-link">
-            <a class="btn btn-danger btn-lg" href="https://dostavka.pizza-sicilia.ru/pitstsa/pizza-40-cm-large/poderevenski" role="button">Заказать</a>
+            <a class="btn btn-danger btn-lg" onclick="yaCounter56668807.reachGoal('zakaz-click'); return=true;" href="https://dostavka.pizza-sicilia.ru/pitstsa/pizza-40-cm-large/poderevenski" role="button">Заказать</a>
             </a>
           </div>
         </div>
@@ -222,7 +222,7 @@
             <p></p>
             <p>30см, 600г – 475р</p>
             <a class="card-link">
-            <a class="btn btn-danger btn-lg" href="https://dostavka.pizza-sicilia.ru/pitstsa/pizza-30-cm-medium/fellini" role="button">Заказать</a>
+            <a class="btn btn-danger btn-lg" onclick="yaCounter56668807.reachGoal('zakaz-click'); return=true;" href="https://dostavka.pizza-sicilia.ru/pitstsa/pizza-30-cm-medium/fellini" role="button">Заказать</a>
             </a>
           </div>
         </div>
@@ -237,7 +237,7 @@
             <p></p>
             <p>40см, 1100г – 705р</p>
             <a class="card-link">
-            <a class="btn btn-danger btn-lg" href="https://dostavka.pizza-sicilia.ru/pitstsa/pizza-40-cm-large/gril-pitstsa" role="button">Заказать</a>
+            <a class="btn btn-danger btn-lg" onclick="yaCounter56668807.reachGoal('zakaz-click'); return=true;" href="https://dostavka.pizza-sicilia.ru/pitstsa/pizza-40-cm-large/gril-pitstsa" role="button">Заказать</a>
             </a>
           </div>
         </div>
@@ -252,7 +252,7 @@
             <p></p>
             <p>40см, 1100г – 699р</p>
             <a class="card-link">
-            <a class="btn btn-danger btn-lg" href="https://dostavka.pizza-sicilia.ru/pitstsa/pizza-40-cm-large/neapolitano-pitstsa" role="button">Заказать</a>
+            <a class="btn btn-danger btn-lg" onclick="yaCounter56668807.reachGoal('zakaz-click'); return=true;" href="https://dostavka.pizza-sicilia.ru/pitstsa/pizza-40-cm-large/neapolitano-pitstsa" role="button">Заказать</a>
             </a>
           </div>
         </div>
@@ -267,7 +267,7 @@
             <p></p>
             <p>40см, 1000г – 795р</p>
             <a class="card-link">
-            <a class="btn btn-danger btn-lg" href="https://dostavka.pizza-sicilia.ru/pitstsa/pizza-40-cm-large/pepperoni-i-vetchina" role="button">Заказать</a>
+            <a class="btn btn-danger btn-lg" onclick="yaCounter56668807.reachGoal('zakaz-click'); return=true;" href="https://dostavka.pizza-sicilia.ru/pitstsa/pizza-40-cm-large/pepperoni-i-vetchina" role="button">Заказать</a>
             </a>
           </div>
         </div>
@@ -282,7 +282,7 @@
             <p></p>
             <p>30см, 500г – 467р</p>
             <a class="card-link">
-            <a class="btn btn-danger btn-lg" href="https://dostavka.pizza-sicilia.ru/pitstsa/pizza-30-cm-medium/palermo-pitstsa" role="button">Заказать</a>
+            <a class="btn btn-danger btn-lg" onclick="yaCounter56668807.reachGoal('zakaz-click'); return=true;" href="https://dostavka.pizza-sicilia.ru/pitstsa/pizza-30-cm-medium/palermo-pitstsa" role="button">Заказать</a>
             </a>
           </div>
         </div>
@@ -297,7 +297,7 @@
             <p></p>
             <p>40см, 1000г – 745р</p>
             <a class="card-link">
-            <a class="btn btn-danger btn-lg" href="https://dostavka.pizza-sicilia.ru/pitstsa/pizza-40-cm-large/chikago" role="button">Заказать</a>
+            <a class="btn btn-danger btn-lg" onclick="yaCounter56668807.reachGoal('zakaz-click'); return=true;" href="https://dostavka.pizza-sicilia.ru/pitstsa/pizza-40-cm-large/chikago" role="button">Заказать</a>
             </a>
           </div>
         </div>
@@ -312,7 +312,7 @@
             <p></p>
             <p>30см, 400г – 485р</p>
             <a class="card-link">
-            <a class="btn btn-danger btn-lg" href="https://dostavka.pizza-sicilia.ru/pitstsa/pizza-30-cm-medium/bekon-i-syir" role="button">Заказать</a>
+            <a class="btn btn-danger btn-lg" onclick="yaCounter56668807.reachGoal('zakaz-click'); return=true;" href="https://dostavka.pizza-sicilia.ru/pitstsa/pizza-30-cm-medium/bekon-i-syir" role="button">Заказать</a>
             </a>
           </div>
         </div>
@@ -328,7 +328,7 @@
             <p></p>
             <p>40см, 1000г – 699р</p>
             <a class="card-link">
-            <a class="btn btn-danger btn-lg" href="https://dostavka.pizza-sicilia.ru/pitstsa/pizza-40-cm-large/vetchina-i-gribyi" role="button">Заказать</a>
+            <a class="btn btn-danger btn-lg" onclick="yaCounter56668807.reachGoal('zakaz-click'); return=true;" href="https://dostavka.pizza-sicilia.ru/pitstsa/pizza-40-cm-large/vetchina-i-gribyi" role="button">Заказать</a>
             </a>
           </div>
         </div>
@@ -344,7 +344,7 @@
             <p></p>
             <p>8х30см, 4000г – <strike>3937р</strike> <text class="text-success">2599р</text></p>
             <a class="card-link">
-            <a class="btn btn-danger btn-lg" href="https://dostavka.pizza-sicilia.ru/kombonaboryi/korporativ" role="button">Заказать</a>
+            <a class="btn btn-danger btn-lg" onclick="yaCounter56668807.reachGoal('zakaz-click'); return=true;" href="https://dostavka.pizza-sicilia.ru/kombonaboryi/korporativ" role="button">Заказать</a>
             </a>
           </div>
         </div>
