--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
         <div class="progress-bar progress-bar-striped bg-danger progress-bar-animated" role="progressbar" style="width: 100%;" aria-valuenow="2019" aria-valuemin="0" aria-valuemax="2019">100%</div>
       </div>
 
-      <p class="lead">🎅 Дней до нового года – <b>6</b></p>
+      <p class="lead">✅ Конкурс завершён!</p>
 
     </div>
 
